--- a/two.html
+++ b/two.html
@@ -24,7 +24,7 @@
         </div>
     </header>
 
-    <main class="bg-[#212224] md:flex md:h-[90vh] md:items-center md:justify-around px-2">
+    <main class="bg-[#212224] md:flex md:h-[90vh] md:items-center md:justify-around ">
         <div class="mb-10 py-10 px-1 items-center md:w-1/2">
             <h1 class="text-white text-4xl my-4 md:text-5xl">Multi-regulated global broker.</h1>
             <p class="text-gray-600">A trusted destination for traders worldwide, Authorised by FCA, AISC & FSCA</p>
