--- a/three.html
+++ b/three.html
@@ -24,7 +24,7 @@
         </div>
     </header>
 
-    <main class="bg-[#212224] md:flex md:h-[90vh] md:items-center md:justify-around ">
+    <main class="bg-[#212224] md:flex md:h-[90vh] md:items-center md:justify-around px-2">
         <div class="mb-10 py-10 px-1 items-center md:w-1/2">
             <h1 class="text-white text-4xl my-4 md:text-5xl">Multi-regulated global broker.</h1>
             <p class="text-gray-600">A trusted destination for traders worldwide, Authorised by FCA, AISC & FSCA</p>
@@ -33,7 +33,7 @@
         </div>
         <div class="md:py-10 flex justify-center">
             <img class="h-96 bg-blend-multiply rounded-2xl"
-                src="https://images.pexels.com/photos/218443/pexels-photo-218443.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+                src="https://img.freepik.com/premium-photo/vibrant-orangepurple-teamwork-illustration_1127-19772.jpg?w=1060"
                 alt="">
         </div>
     </main>
