--- a/three.html
+++ b/three.html
@@ -56,7 +56,7 @@
             <span class="bg-[#4ade80] font-bold rounded px-4 py-1">^ 1,740.05</span>
         </div>
         <div class="flex items-center gap-4 h-16 sm:gap-2">
-            <img class="w-28 lg:w-20" src="https://assets.stickpng.com/images/62cc22fa150d5de9a3dad605.png" alt="">
+            <img class="w-28 lg:w-20" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/2560px-Google_2015_logo.svg.png" alt="">
             <span class="bg-[#4ade80] font-bold rounded px-4 py-1">^ 1,740.05</span>
         </div>
     </section>
