--- a/two.html
+++ b/two.html
@@ -24,14 +24,14 @@
         </div>
     </header>
 
-    <main class="bg-[#212224] md:flex md:h-[90vh] md:items-center md:justify-around ">
+    <main class="bg-[#212224] md:flex md:h-[100vh] md:items-center md:justify-around ">
         <div class="mb-10 py-10 px-1 items-center md:w-1/2">
             <h1 class="text-white text-4xl my-4 md:text-5xl">Multi-regulated global broker.</h1>
             <p class="text-gray-600">A trusted destination for traders worldwide, Authorised by FCA, AISC & FSCA</p>
             <button class="text-white border border-[#fc5b3f] px-3 py-2 mt-2 w-full rounded md:w-48 font-bold">Discover Accounts</button>
         </div>
         <div class="md:py-10 flex justify-center">
-            <img class="h-96 bg-blend-multiply rounded-2xl" src="https://img.freepik.com/premium-photo/vibrant-orangepurple-teamwork-illustration_1127-19772.jpg?w=1060" alt="">
+            <img class="h-96 bg-blend-multiply rounded-2xl" src="https://www.uniskytechnologies.com/img/in-liquid-slide-2.svg" alt="">
         </div>
     </main>
     <script src="https://kit.fontawesome.com/7da929df39.js" crossorigin="anonymous"></script>
