--- a/three.html
+++ b/three.html
@@ -33,7 +33,7 @@
         </div>
         <div class="md:py-10 flex justify-center">
             <img class="h-96 bg-blend-multiply rounded-2xl"
-                src="https://img.freepik.com/premium-photo/vibrant-orangepurple-teamwork-illustration_1127-19772.jpg?w=1060"
+                src="https://www.uniskytechnologies.com/img/in-liquid-slide-2.svg"
                 alt="">
         </div>
     </main>
