--- a/nine2.html
+++ b/nine2.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="flex items-center justify-center ">
-        <div class="text-[#fc5b3f] font-bold fixed top-0 bg-white z-10 px-2 animate-pulse">
-            Simple steps to start trade.
+        <div class="text-[#fc5b3f] font-bold fixed top-0 bg-white z-10 px-2 ">
+            <span class="animate-pulse">Simple steps to start trade.</span>
         </div>
     </div>
     <div class="border-2 border-[#fc5b3f] rounded mx-1 flex flex-col justify-center items-center py-10 relative top-3 md:flex-row md:justify-around"> 
